--- a/examples/reprojection.html
+++ b/examples/reprojection.html
@@ -14,14 +14,14 @@ resources:
     <div id="map" class="map"></div>
   </div>
   <form class="form-inline">
-    <div class="span4">
+    <div class="col-md-3">
       <label>Base map:</label>
       <select id="base-map">
         <option value="MapQuest">MapQuest OSM</option>
         <option value="wms4326">EPSG:4326 from WMS</option>
       </select>
     </div>
-    <div class="span4">
+    <div class="col-md-4">
       <label>Overlay map:</label>
       <select id="overlay-map">
         <option value="OS">British National Grid (EPSG:27700)</option>
@@ -29,11 +29,12 @@ resources:
         <option value="wmts3413">NASA Arctic WMTS (EPSG:3413)</option>
       </select>
     </div>
-    <div class="span4">
+    <div class="col-md-5">
       <label>View projection:</label>
       <select id="view-projection">
         <option value="EPSG:3857">Spherical Mercator (EPSG:3857)</option>
         <option value="EPSG:4326">EPSG:4326</option>
+        <option value="ESRI:54009">Mollweide (ESRI:54009)</option>
         <option value="EPSG:27700">British National Grid (EPSG:27700)</option>
         <option value="EPSG:23032">ED50 / UTM zone 32N (EPSG:23032)</option>
         <option value="EPSG:2163">US National Atlas Equal Area (EPSG:2163)</option>
