Make rendering of reprojection edges configurable

--- a/examples/reprojection.html
+++ b/examples/reprojection.html
@@ -42,5 +42,6 @@ resources:
         <option value="EPSG:5479">RSRGD2000 / MSLC2000 (EPSG:5479)</option>
       </select>
     </div>
+    <label for="render-edges"><input type="checkbox" id="render-edges" />Render reprojection edges</label>
   </form>
 </div>
