--- a/examples/reprojection.html
+++ b/examples/reprojection.html
@@ -28,6 +28,7 @@ resources:
         <option value="wms21781">Swisstopo WMS (EPSG:21781)</option>
         <option value="wmts3413">NASA Arctic WMTS (EPSG:3413)</option>
         <option value="grandcanyon">Grand Canyon HiDPI (EPSG:3857)</option>
+        <option value="states">United States (EPSG:3857)</option>
       </select>
     </div>
     <div class="col-md-5">
